[tool.poetry]
name = "pynamo-factories"
version = "0.1.0"
description = "Fakers for Pynamo models, based on the very helpful pydantic-factories."
authors = ["Jennifer Moore <jenniferplusplus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynamodb = "^5.2.1"
Faker = "^13.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
