[tool.poetry]
name = "pynamodb-factories"
version = "0.1.1"
description = "Fakers for Pynamo models, based on the very helpful pydantic-factories."
authors = ["Jennifer Moore <jenniferplusplus@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/jenniferplusplus/pynamo-factories"
keywords = ["pynamod", "pynamodb", "fake", "pynamodb-factories"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Faker = "^13.3.1"
pynamodb = ">=4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
